--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -19,6 +19,9 @@ jobs:
       run: |
         export SHELL=/bin/bash
         eval $(minikube -p minikube docker-env)
+        echo "Docker info:"
+        docker info
+        echo "Building Docker image..."
         docker build -f ./Dockerfile -t devopshint/node-app:latest .
         echo -n "verifying images:"
         docker images
