--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -32,6 +32,10 @@ jobs:
     - name: Deploy to minikube
       run: |
         kubectl apply -f k8s-node-app.yaml
+    - name: Wait for pod to be ready
+      run: |
+        echo "Esperando a que el pod esté listo..."
+        kubectl wait --for=condition=ready pod -l app=nodejs-app --timeout=60s
 
     - name: Test service URLs
       run: |
